Re-do of Website

--- a/styles.css
+++ b/styles.css
@@ -1,224 +1,6 @@
 * {
-  padding: 0px;
-  margin: 0px;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-}
-body {
-  overflow-x: hidden;
-}
-.Logo img {
-  width: 120px;
-  height: 100%;
-  user-select: none;
-}
-
-nav {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  min-height: 5vh;
-  max-height: 15vh;
-  background-color: rgb(29, 28, 28);
-  color: rgb(209, 209, 209);
-  font-family: "Open Sans", sans-serif;
-  padding: 20px;
-  position: sticky;
-}
-
-.nav_links {
-  position: relative;
-  display: flex;
-  justify-content: space-around;
-  width: 40%;
-  list-style: none;
-  height: 50%;
-}
-
-.nav_links a {
-  position: absolute;
-  top: -35px;
-  color: #fc5254;
-  text-decoration: none;
-  letter-spacing: 2px;
-  font-weight: 400;
-  font-size: 1.3rem;
-  padding: 20px;
-  transition: all 0.13s ease-in;
-}
-
-.nav_links a:hover {
-  color: #ff3135;
-  background-color: black;
-  border-radius: 40px;
-  border: 3px solid #ff3135;
-  padding: 20px;
-}
-.Download {
-  position: relative;
-}
-.Download a {
-  background-color: #fc5254;
-  font-size: 1.5rem;
-  font-weight: bold;
-  padding: 20px;
-  margin-left: 80px;
-  margin-bottom: 20px;
-  border-radius: 30px;
-  border: none;
-  text-decoration: none;
-  color: rgb(231, 231, 231);
-  letter-spacing: 2px;
-  transition: all 0.15s ease-out;
-}
-
-.Download a:hover {
-  background-color: rgb(29, 28, 28);
-  color: #fc5254;
-  border-radius: 30px;
-  padding: 20px;
-}
-
-.coll div {
-  width: 25px;
-  height: 3px;
-  background-color: aqua;
-  margin: 4px;
-}
-
-@media screen and (min-width: 900px) {
-  .coll {
-    display: none;
-  }
-  .nav_li_down {
-    display: none;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  .nav_links {
-    width: 50%;
-    font-size: 1.3rem;
-  }
-  .Download a {
-    padding: 15px;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  body {
-    overflow-x: hidden;
-  }
-  .nav_links {
-    position: absolute;
-    right: 0px;
-    height: 100vh;
-    width: 60%;
-    top: 0vh;
-    background-color: rgb(29, 28, 28);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    transform: translateX(100%);
-  }
-
-  .Download {
-    display: none;
-  }
-  .nav_links li {
-    opacity: 0%;
-  }
-  .coll {
-    display: block;
-    cursor: pointer;
-  }
-}
-
-.Video {
-  display: flex;
-  width: 100%;
-  height: 100%;
-}
-.Video video {
-  width: 100%;
-  height: 100%;
-}
-
-.s1P {
-  font-size: 1.5rem;
-  font-weight: 500;
-}
-
-.s1 {
-  display: flex;
-  flex-direction: column;
-  text-align: center;
-  justify-content: space-between;
-  padding: 30px;
-  margin: 30px;
-}
-.s2 {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 30px;
-  margin: 30px;
-}
-.HL {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-.Riot_logo img {
-  width: 200px;
-  height: 200px;
-  padding: 20px;
-  user-select: none;
-}
-.s2p {
-  width: 50%;
-  font-weight: 400;
-  font-size: 1.5rem;
-  text-align: center;
-}
-.s2p_ul li {
-  display: flex;
-  font-size: 2rem;
-  text-decoration: none;
-}
-.F_nav {
-  min-height: 10vh;
-  max-height: 30vh;
-  display: flex;
-  flex-direction: column;
-}
-
-.F_nav .foot {
-  font-size: 1.2rem;
-  letter-spacing: 2px;
-  list-style: none;
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-evenly;
-}
-
-.F_nav .con_logo {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  width: 50%;
-  list-style: none;
-}
-.F_nav .con_logo li {
-  border: 1px solid black;
-  background-color: rgb(51, 51, 51);
-  padding: 10px;
-  border-radius: 10px;
-  width: 3em;
-  height: 3em;
-}
-.F_nav a {
-  text-decoration: none;
-  color: rgb(231, 231, 231);
+  font-family: "Ubuntu", sans-serif;
 }
